2008-01-22  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c (main): Only call initgroups if changeuser
	is not NULL.

2008-01-22  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c (gid_in_current_groups): Remove function.
	(main): Call initgroups if the real user or group are different than
	the ones we should switch to. Call setgid before initgroups.

2008-01-22  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-genchanges.pl, scripts/dpkg-gencontrol.pl,
	scripts/dpkg-source.pl: Remove the IO-layer that converts to
	UTF-8. It's not as smart as I expected.

	* scripts/dpkg-genchanges.pl: Do not substitute variables on
	the output.
	* man/dpkg-genchanges.pl: Document this change.

2008-01-22  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.14.16.2.

2008-01-22  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c (main): Move setuid code after initgroups
	and setgid.

2008-01-21  Frank Lichtenheld  <djpig@debian.org>

	* configure.ac: Release 1.14.16.1

	* scripts/dpkg-source.pl: Fix "uninitialized value"
	warning.

	* debian/control: Add libtimedate-perl to
	dpkg-dev's Depends and to Build-Depends (for
	build-time tests). This introduces our first
	run-time dependency on a perl module not shipped
	with Perl itself. But to me it seems not worth
	trying to replace that code.

2008-01-21  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.14.16.

2008-01-21  Guillem Jover  <guillem@debian.org>

	* README.api: New file.
	* README.feature-removal-schedule: Likewise.
	* Makefile.am (EXTRA_DIST): Add README.feature-removal-schedule and
	README.api.

2008-01-21  Guillem Jover  <guillem@debian.org>

	* configure.ac (AC_CHECK_FUNCS): Escape new lines.

2008-01-21  Ian Jackson  <ian@davenant.greenend.org.uk>

	* src/processarc.c (process_archive): Fix incorrect sizeof in a
	memset call.

2008-01-21  Guillem Jover  <guillem@debian.org>
