@@ -11,6 +11,9 @@ dpkg (1.14.16.3) UNRELEASED; urgency=low
   * Fix segfault in start-stop-daemon when using --group w/o --chuid (as
     a side effect, using --group alone works for the first time in years).
     Closes: #462072
+  * Fix timeout computations for start-stop-daemon --retry option. This has
+    not worked properly for a long time (maybe never), but came to light
+    due to #460903's fix. Closes: #462104
 
  -- Raphael Hertzog <hertzog@debian.org>  Tue, 22 Jan 2008 18:15:42 +0100
 
